--- a/Grafos Dirigidos(Lista Objetos)/src/frmGrafos.form
+++ b/Grafos Dirigidos(Lista Objetos)/src/frmGrafos.form
@@ -50,6 +50,7 @@
                                   <Component id="barcosentrantes" alignment="0" max="32767" attributes="0"/>
                                   <Component id="bconexo" alignment="0" max="32767" attributes="0"/>
                                   <Component id="bcantidadislas" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="bexistecamino" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -88,6 +89,8 @@
                       <Component id="bconexo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="bcantidadislas" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="bexistecamino" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -212,6 +215,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bcantidadislasActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="bexistecamino">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Existe Camino"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bexistecaminoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
